syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "common.proto";

package users;

service UserService {
  rpc findOne (common.IdParam) returns (User) {}
  rpc getAll (google.protobuf.Empty) returns (Users) {}
  rpc findByEmail (common.EmailParam) returns (User) {}
  rpc set(SetParams) returns (User) {}
} 

message SetParams {
  string firstName = 2;
  string lastName = 3;
  string email = 4;
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

message Users {
  repeated Users data = 5;
}